# edge-deploy

agent/: =1.64.0  README.md  docker-compose.yml
agent/controller/: Dockerfile  alembic.ini  pyproject.toml
agent/controller/alembic/: env.py
agent/controller/app/: config.py  database.py  grpc_server.py  main.py
agent/controller/app/grpc_services/: __init__.py  app_servicer.py  deployment_servicer.py  device_servicer.py  edge_control_servicer.py  edge_registration_servicer.py
agent/controller/app/models/: __init__.py  app.py  deployment.py  deployment_log.py  device.py  provisioning_token.py
agent/controller/app/routers/: apps.py  bulk.py  deployments.py  devices.py  overview.py  provisioning.py
agent/controller/app/schemas/: app.py  deployment.py  device.py
agent/controller/app/services/: agent_client.py  cert_manager.py  config_store.py  deployment_service.py  health_monitor.py  manifest_builder.py  stream_manager.py
agent/controller/app/templates/: deployment.yaml.j2  service.yaml.j2
agent/controller/data/: controller.db
agent/controller/tests/: conftest.py  test_workflow.py
agent/deploy/: docker-compose.prod.yml
agent/docs/: ARCHITECTURE.md  DEPLOYMENT.md
agent/edge-agent/: Dockerfile  pyproject.toml
agent/edge-agent/app/: config.py  grpc_client.py  health_server.py  main.py
agent/edge-agent/app/services/: command_handler.py  config_cache.py  k8s_manager.py  reconnect.py
agent/edge-agent/tests/: conftest.py  test_workflow.py
agent/envoy/: Dockerfile  envoy.yaml
agent/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  (+3 more)
(+32 files in other folders)
